--- a/returnsbyyear.ipynb
+++ b/returnsbyyear.ipynb
@@ -2,23 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-f67994cacdc8>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-f67994cacdc8>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def returnsbyyear(year)\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def returnsbyyear(year)\n",
-    "    t1 = plt.(np.diff(np.log(mydata.loc[str(year)+'-01-01':str(year)+'-12-31']['Close'])))\n"
+    "def returnsByYear(year, when='Close'):\n",
+    "    return np.diff(np.log(mydata.loc[str(year)+'-01-01':str(year)+'-12-31'][when]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def meanByYear(year, when='Close'):\n",
+    "    tmp = returnsByYear(year,when)\n",
+    "    return np.mean(tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def stdByYear(year):\n",
+    "    tmp = returnsByYear(year,when)\n",
+    "    return np.std(tmp)"
    ]
   },
   {
@@ -28,24 +45,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def returnsByYear(year)\n",
-    "    return np.diff(np.log(mydata.loc[str(year)+'-01-01':str(year)+'-12-31']['Close']))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def meanbyyear(year)\n",
-    "    tmp=returnsbyyear(year)\n",
-    "    print(\" mean and standart deviation of close return in \"+str(year)+\" is mean:\"+str(np.mean(tmp))\n",
-    "          +\" std=\"+str(np.std(tmp)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
