added ideas in ideas.md

--- a/exploration_massil.ipynb
+++ b/exploration_massil.ipynb
@@ -389,6 +389,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Regarder\n",
+    "http://networkx.github.io/\n",
+    "\n",
+    "https://networkx.github.io/documentation/latest/reference/generated/networkx.linalg.graphmatrix.adjacency_matrix.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
