added few lines of code to plot hist with shared axes

--- a/exploration_massil.ipynb
+++ b/exploration_massil.ipynb
@@ -413,13 +413,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## useful code to plot histograms with same axes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.rcParams['figure.figsize'] = (19.0, 12.0)\n",
+    "f, axes = plt.subplots(10, sharex=True, sharey=True)\n",
+    "for i, axi in enumerate(axes):\n",
+    "    axi.hist(comp_martingale[i],bins=20)\n",
+    "f.subplots_adjust(hspace=0)"
+   ]
   }
  ],
  "metadata": {
